Fix AddMessage alignment

--- a/src/components/AddMessage/AddMessage.css
+++ b/src/components/AddMessage/AddMessage.css
@@ -1,3 +1,4 @@
-.ui.drowdown.message-container .menu {
+.message-container .menu {
     right: 0 !important;
+    left: auto !important;
 }
